fix header nav spacing on 11inches

--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -6,9 +6,15 @@ header {
   z-index: 99;
   width: 100%;
   top:0;
-
+  @include media(min-width 900px) {
+    > .container {
+      display:flex;
+      flex-flow: row nowrap;
+    }
+  }
 
   a.logo {
+    flex-grow: 0;
     display: inline-block;
     float: left;
 
@@ -20,16 +26,22 @@ header {
   }
 
   nav {
-    display: inline-block;
+    display: block;
     float: right;
+    flex-grow: 1;
+    padding-left: 4rem;
+
     ul {
       list-style: none;
       padding: 0; margin: 0;
+
       display: flex;
       flex-flow: row nowrap;
+      justify-content: space-around;
+
       li {
         display: inline-block;
-        margin-right: 4rem;
+
         a {
           display: block;
 
